# photon

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yaml
docs/: artifact_evaluation.fdb_latexmk  artifact_evaluation.tex  sigplanconf.cls
photon/: __init__.py  centralised_train.py  client_app.py  hydra_resolver.py  server_app.py  utils.py  wandb_history.py
photon/clients/: __init__.py  configs.py  llm_client_functions.py  llm_config_functions.py  trainer_utils.py  utils.py
photon/conf/: __init__.py  base.yaml  base_schema.py
photon/conf/dataset/: default.yaml  fed-c4.yaml
photon/conf/dataset/streams/: 1_client_small.yaml  2_clients.yaml  4_clients.yaml  8_clients.yaml  centralised.yaml
photon/conf/eval_gauntlet_config/: empty.yaml  eval_gauntlet_v0.3.yaml
photon/conf/icl_tasks_config/: empty.yaml  tasks_v0.3.yaml  tasks_v0.3_sps_only.yaml  tasks_v0.3_sps_only_plus_mmlu.yaml
photon/conf/lighteval/: smollm2_base.txt  smollm2_base_no_vllm.txt  smollm2_instruct.txt
photon/conf/llm_config/: mpt-125m.yaml  mpt-1b.yaml  mpt-3b.yaml  mpt-7b.yaml
photon/dataset/: __init__.py  convert_dataset_hf.py  dataset_types.py  samples_generators.py  stream_partitioner.py  utils.py
photon/dataset/constants/: __init__.py  dataset_constants_types.py  mc4.py
photon/metrics/: __init__.py  unigram_normalized_metrics.py
photon/node_manager/: __init__.py  node_manager_app.py
photon/server/: __init__.py  broadcast_utils.py  evaluate_utils.py  fit_utils.py  init_utils.py  s3_utils.py  server_util.py
photon/shm/: __init__.py  constants.py  utils.py
photon/strategy/: __init__.py  aggregation.py  constants.py  dispatcher.py  fedadam.py  fedavg_eff.py  fedmom.py  fednestorov.py  fedyogi.py  metrics.py  strategy_with_cfg.py  utils.py
photon/worker/: __init__.py  utils.py  worker.py
scripts/: cen_125m_example.sh  centralised_training.sh  convert_c4_dataset.sh  eval_125m_example.sh  eval_gauntlet_only.sh  fed_125m_example.sh  install_env.sh  photon_llm_125M.sh  photon_llm_125M_client_only.sh  prepare_eval_dataset.sh  set_llm_config.sh  system_setup.sh
